# tinyrenderer-rs

./: Cargo.toml
src/: draw_target.rs  main.rs  mat.rs  model.rs  transform.rs  util.rs  vec.rs
