[package]
name = "tinyrenderer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.16"
embedded-graphics-simulator = "0.5.0"
embedded-graphics = "0.8.0"
tinytga = "0.5.0"
image = "0.25.1"
